# issue-overseer

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  ROADMAP.md  ROADMAP2.md  ROADMAP3.md  ROADMAP4.md  gateway_roadmap_1.md  overseer.toml  product.md  pyproject.toml  start-server.sh  start-web.sh
.claude/agents/: doc-reviewer.md  roadmap-reviewer.md
.claude/plans/: sunny-conjuring-naur-agent-a45d828e38124a095.md  sunny-conjuring-naur-agent-a9b1da95d14a33d2e.md
agent/: __main__.py  config.py  main.py  models.py
agent/agent/: context.py  runtime.py  safety.py
agent/cli/: client.py  commands.py  output.py  parser.py  stream.py
agent/db/: connection.py  repos.py
agent/server/: app.py  event_bus.py  routes.py  sse.py
agent/skills/: base.py  plan.py
data/: mango.db
gateway/: gateway.toml  pyproject.toml  start-gateway.sh
gateway/src/mango_gateway/: __init__.py  __main__.py  config.py  main.py  models.py
gateway/src/mango_gateway/db/: connection.py  repos.py
gateway/src/mango_gateway/db/migrations/: 001_init.sql
gateway/src/mango_gateway/server/: app.py  routes.py
gateway/src/mango_gateway/service/: gateway.py  runtime_client.py
gateway/tests/: conftest.py  test_api.py  test_gateway_service.py  test_runtime_client.py
src/mango/: config.py  (+4 more)
tests/: conftest.py  test_api.py  test_cli.py  test_cli_client.py  test_config.py  test_context.py  test_db.py  test_e2e.py  test_event_bus.py  test_health.py  test_opencode_client.py  test_plan_skill.py  test_runtime.py  test_safety.py  test_sse.py
web/: index.html  package-lock.json  package.json  vite.config.ts
(+52 files in other folders)
